--- a/src/components/Cart.module.css
+++ b/src/components/Cart.module.css
@@ -8,6 +8,12 @@
   padding: 1rem;
   animation: slideCartIn 0.7s forwards;
 }
+.container main {
+  display: flex;
+  height: 90%;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .backdrop {
   cursor: pointer;
   position: fixed;
@@ -47,4 +53,81 @@
   display: flex;
   gap: 20px;
   align-items: center;
+}
+.checkoutContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-inline: 2rem;
+}
+.checkout {
+  height: 6rem;
+  margin-top: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-inline: 1rem;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.button {
+  margin-top: 1rem;
+  width: 80%;
+  height: 2rem;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    width: 60%;
+  }
+}
+
+@media (max-width: 700px) {
+  .container {
+    width: 80%;
+  }
+  @keyframes slideCartIn {
+    0% {
+      right: -80%;
+    }
+    100% {
+      right: 0%;
+    }
+  }
+
+  @keyframes slideCartOut {
+    0% {
+      right: 0%;
+    }
+    100% {
+      right: -80%;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+  }
+  .checkout {
+    height: 5rem;
+    font-size: 1.3rem;
+  }
+  @keyframes slideCartIn {
+    0% {
+      right: -100%;
+    }
+    100% {
+      right: 0%;
+    }
+  }
+
+  @keyframes slideCartOut {
+    0% {
+      right: 0%;
+    }
+    100% {
+      right: -100%;
+    }
+  }
 }
