--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,16 +11,20 @@
   scale: 150%;
 }
 .addItemInCart {
-  animation: addItemInCart 0.3s;
-  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  animation: addItemInCart 0.7s;
+  transition-timing-function: ease-in-out;
 }
 @keyframes addItemInCart {
   0% {
     scale: 100%;
     color: black;
   }
-  100% {
+  50% {
     scale: 200%;
     color: #f02d34;
+  }
+  100% {
+    scale: 100%;
+    color: black;
   }
 }
